--- a/note/基本技术结构类型.md
+++ b/note/基本技术结构类型.md
@@ -28,6 +28,20 @@ Stack()创建一个新的空栈，它不需要参数，并返回一个空栈
 | s.pop()       | [4,'dog']          | True   |
 | s.size()      | [4,'dog']          | 2      |
 
+#### 栈练习二：{[()]}匹配
+
+计算机组成原理       操作系统        
+
+#### 栈练习三：十进制转换成二进制
+
+计算机中，所有的值都是以0和1存储的
+
+十进制的233:2*102
+
+二进制 11101001
+
+
+
 ### 队列 :先入先出数据结构
 
 在 FIFO 数据结构中，将**首先处理添加到队列中的第一个元素**。
