队列&双端队列

--- a/note/基本数据结构--栈.md
+++ b/note/基本数据结构--栈.md
@@ -18,8 +18,6 @@
 
 
 
-
-
 ## 二、 栈
 
 1. 什么是栈？
@@ -47,6 +45,8 @@
 
 ## 栈练习一：（）匹配
 
+思路一：
+
 1. 我们从表达式的左侧开始，每次只处理一个括号。
 2. 假设我们遇到一个开括号（即 (），表达式是否无效取决于在该表达式的其余部分的某处是否有相匹配的闭括号（即 )）。此时，我们只是增加计数器的值保持跟踪现在为止开括号的数目。left += 1
 3. 如果我们遇到一个闭括号，这可能意味着这样两种情况：
@@ -56,15 +56,15 @@
 5. 继续处理字符串，直到处理完所有括号。
 6. 如果最后我们仍然有未配对的左括号，这意味着表达式无效。
 
-栈
+思路二 栈：
 
 1. 从空栈开始，从左到右处理括号字符串。如果一个符号是一个开始符号，将其作为一个信号，与之对应的结束符号稍后会出现。
+
 2. 如果符号是结束符号，弹出栈，只要弹出栈的开始符号可以匹配每个结束符号，则括号保持匹配状态。如果任何时候栈上没有出现符合开始符号的结束符号，则字符串不匹配。
+
 3. 当所有的符号都被处理后，栈是空的才可以。
 
-       “（（））”
-    
-      “（（（））”
+   “（（））”       “（（（））”
 
 ## 栈练习二：{[()]}匹配
 
@@ -79,7 +79,6 @@
 作者：LeetCode
 链接：https://leetcode-cn.com/problems/valid-parentheses/solution/you-xiao-de-gua-hao-by-leetcode/
 来源：力扣（LeetCode）
-著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
 
 
 
@@ -130,8 +129,6 @@
 
 
 11101001 = `1*2^7+1*2^6+1*2^5+0*2^4+1*2^3+0*2^2+0*2^1+1*2^0`
-
-
 
 
 
